--- a/m/changelog/index.html
+++ b/m/changelog/index.html
@@ -45,6 +45,10 @@
 					</section>
 					<hr>
 					<section>
+						<h2><u>28th January 2025</u></h2>
+						<ul><li>[=] Standardized entries in <a href="../../w/index.html">Writing</a>.</li></ul>
+					</section>
+					<section>
 						<h2><u>27th January 2025</u></h2>
 						<ul>
 							<li>[=] Made all images on changelog clickable.</li>
