--- a/w/20240723-everything-must-go/index.html
+++ b/w/20240723-everything-must-go/index.html
@@ -1,5 +1,5 @@
 <!-- Copyright (©) 2024-2025 Callum Fisher - cf.fisher.bham@gmail.com
-2024.08.22 - 2025.01.28 -->
+2024.08.22 - 2025.01.29 -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 		<main>
-			<div class="box">
+			<div class="box homely">
 				<article>
 					<h1>Everything Must Go</h1>
 					<p>
