--- a/w/20250125-serious/index.html
+++ b/w/20250125-serious/index.html
@@ -1,5 +1,5 @@
 <!-- Copyright (©) 2025 Callum Fisher - cf.fisher.bham@gmail.com
-2025.01.25 - 2025.01.28 -->
+2025.01.25 - 2025.01.29 -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 		<main>
-			<div class="box">
+			<div class="box homely">
 				<article>
 					<h1>serious</h1>
 					<p>
