--- a/w/20240710-beached/index.html
+++ b/w/20240710-beached/index.html
@@ -1,5 +1,5 @@
 <!-- Copyright (©) 2025 Callum Fisher - cf.fisher.bham@gmail.com
-2025.01.24 - 2025.01.25 -->
+2025.01.24 - 2025.01.29 -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 		<main>
-			<div class="box">
+			<div class="box homely">
 				<h1>beached</h1>
 				<p>
 					Standing at the center of an overcrowded beach<br>
