--- a/m/privacy/index.html
+++ b/m/privacy/index.html
@@ -40,10 +40,10 @@
 						<p>We partner with <a target="_blank" href="https://clarity.microsoft.com/">Microsoft Clarity</a> and Microsoft Advertising to capture how you use and interact with our website through behavioral metrics, heatmaps, and session replay to improve and market our products/services. Website usage data is captured using first and third-party cookies and other tracking technologies to determine the popularity of products/services and online activity. Additionally, we use this information for site optimization, fraud/security purposes, and advertising. For more information about how Microsoft collects and uses your data, visit the <a target="_blank" href="https://privacy.microsoft.com/privacystatement">Microsoft Privacy Statement</a>.</p>
 						<a class="button background" onclick="siteSettings.toggleAnalytics()" id="toggleAnalytics">Disable Microsoft Clarity for Analytics</a>
 					</section>
-					<section>
+					<!--<section>
 						<h2>Google AdSense for Advertising</h2>
 						<p>We display ads provided by <a target="_blank" href="https://google.com/adsense/">Google AdSense</a> on certain pages. Google may use cookies to personalize the ads you see based on your interests. For more information, see <a href="https://policies.google.com/privacy">Google's privacy policy</a>.</p>
-					</section>
+					</section>-->
 					<section>
 						<h2>Giscus for Comments</h2>
 						<p><a href="https://giscus.app/">Giscus</a> provides comments via <a target="_blank" href="https://github.com/">GitHub</a> on certain pages. This doesn't do any tracking or advertising, but I thought I should mention it anyway.</p>
