--- a/m/about/index.html
+++ b/m/about/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2024-2025 Callum Fisher - cf.fisher.bham@gmail.com
+<!-- Copyright (©) 2024-2025 Callum Fisher - fishercallum@proton.me
 2024.08.09 - 2025.01.23 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -36,7 +36,7 @@
 						I'm a hobbyist coder who has been working with JavaScript since 2015, starting at age 9. I love exploring music-centric projects.
 					</p>
 					<p>
-						If you have any thoughts or anything to talk to me about, I'd be grateful if you would <a href="mailto:cf.fisher.bham@gmail.com">get in touch via e-mail</a>.
+						If you have any thoughts or anything to talk to me about, I'd be grateful if you would <a href="mailto:fishercallum@proton.me">get in touch via e-mail</a>.
 					</p>
 					<p>
 						You can also find me on:
