--- a/t/20220412-crystal-fm/index.html
+++ b/t/20220412-crystal-fm/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2022-2025 Callum Fisher - cf.fisher.bham@gmail.com
+<!-- Copyright (©) 2022-2025 Callum Fisher - fishercallum@proton.me
 2022.04.12 - 2025.01.26 -->
 <!DOCTYPE html>
 <html lang="en">
