--- a/t/20240706-about-multiplayer-piano/index.html
+++ b/t/20240706-about-multiplayer-piano/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2024-2025 Callum Fisher - cf.fisher.bham@gmail.com
+<!-- Copyright (©) 2024-2025 Callum Fisher - fishercallum@proton.me
 2024.07.06 - 2025.01.27 -->
 <!DOCTYPE html>
 <html lang="en">
