--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2024-2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2024-2025 callum fisher - fishercallum@proton.me
 2024.08.09 - 2025.01.23 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -13,7 +13,7 @@
 		<link rel="manifest" href="/site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Find missing pages on the website."/>
-		<title>Where is it!? | Callum Fisher</title>
+		<title>Where is it!? | callum fisher</title>
 		<script src="/pagefind/pagefind-ui.js"></script>
 		<script src="/a/js/pageFindAutoSearch.js"></script>
 	</head>
