--- a/m/changelog/20240828/index.html
+++ b/m/changelog/20240828/index.html
@@ -1,5 +1,5 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
-2025.02.05 -->
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
+2025.02.05 - 2025.02.20-->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -11,7 +11,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="../../../apple-touch-icon.png"/>
 		<link rel="manifest" href="../../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<title>2024.08.28 - Website Changelog | Callum Fisher</title>
+		<title>2024.08.28 - Website Changelog | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
@@ -19,7 +19,7 @@
 			<label for="hamburgerToggle" class="hamburger">☰</label>
 			<div class="menu-items" id="menuItems">
 				<div class="primary-buttons">
-					<a class="button" role="button" href="../../index.html">Directory</a>
+					<a class="button" role="button" href="../../../index.html">Directory</a>
 				</div>
 				<div class="secondary-buttons">
 					<a class="button secondary" role="button" href="../index.html">See changelog</a>
