--- a/m/changelog/20250204/index.html
+++ b/m/changelog/20250204/index.html
@@ -1,5 +1,5 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
-2025.02.04 -->
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
+2025.02.04 - 2025.02.20-->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="A changelog entry talking about moving a ton of separate writing pages into one, organizing site structure, trying to make it more accessible."/>
-		<title>2025.02.04 - Website Changelog | Callum Fisher</title>
+		<title>2025.02.04 - Website Changelog | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
@@ -20,7 +20,7 @@
 			<label for="hamburgerToggle" class="hamburger">☰</label>
 			<div class="menu-items" id="menuItems">
 				<div class="primary-buttons">
-					<a class="button" role="button" href="../../index.html">Directory</a>
+					<a class="button" role="button" href="../../../index.html">Directory</a>
 				</div>
 				<div class="secondary-buttons">
 					<a class="button secondary" role="button" href="../index.html">See changelog</a>
