--- a/m/index.html
+++ b/m/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2024-2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2024-2025 callum fisher - fishercallum@proton.me
 2024.08.26 - 2025.01.26 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -13,7 +13,7 @@
 		<link rel="manifest" href="../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Quick links to important information such as Copyright & Licensing, contribution and contact information."/>
-		<title>Meta | Callum Fisher</title>
+		<title>Meta | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
