--- a/t/20220412-crystal-fm/index.html
+++ b/t/20220412-crystal-fm/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2022-2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2022-2025 callum fisher - fishercallum@proton.me
 2022.04.12 - 2025.01.26 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Crystal FM was a bot built for playing music in voice channels on Discord. Unlike most Discord music bots at the time, it wasn't intended for on-demand song requests. Instead, it offered easy access to a steady stream of hand-picked songs."/>
-		<title>Crystal FM: A radio-like music bot for Discord | Callum Fisher</title>
+		<title>Crystal FM: A radio-like music bot for Discord | callum fisher</title>
 	</head>
 	<!-- 28/05/2019 -->
 	<body>
