--- a/t/20240706-about-multiplayer-piano/index.html
+++ b/t/20240706-about-multiplayer-piano/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2024-2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2024-2025 callum fisher - fishercallum@proton.me
 2024.07.06 - 2025.01.27 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +11,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png"/>
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<title>About Multiplayer Piano | Callum Fisher</title>
+		<title>About Multiplayer Piano | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
