--- a/t/20250114-name-saver-for-multiplayer-piano/index.html
+++ b/t/20250114-name-saver-for-multiplayer-piano/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
 2025.01.14 - 2025.02.08 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Auto-Save & Set your nickname on Multiplayer Piano. No more 'Anonymous.'"/>
-		<title>Name Saver for Multiplayer Piano | Callum Fisher</title>
+		<title>Name Saver for Multiplayer Piano | callum fisher</title>
 		<script src="../../a/js/standard.js"></script>
 	</head>
 	<body>
