--- a/t/20250123-nmpb-plus-plus/index.html
+++ b/t/20250123-nmpb-plus-plus/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
 2025.01.23 - 2025.01.24 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="A Node.js MIDI player bot for Multiplayer Piano that connects clients via proxies and splits MIDI notes between them to bypass ratelimits."/>
-		<title>NMPB++ for Multiplayer Piano: A Node.js MIDI player bot | Callum Fisher</title>
+		<title>NMPB++ for Multiplayer Piano: A Node.js MIDI player bot | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
