--- a/t/index.html
+++ b/t/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
 2025.01.13 - 2025.02.06 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="All things tech. Articles and original open-source coding projects."/>
-		<title>Tech | Callum Fisher</title>
+		<title>Tech | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
