--- a/m/about/index.html
+++ b/m/about/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2024-2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2024-2025 callum fisher - fishercallum@proton.me
 2024.08.09 - 2025.01.23 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Hi. I'm Callum. I've been coding stuff since age 9, and hopefully most of that stuff will end up documented here. Thanks for checking in."/>
-		<title>About | Callum Fisher</title>
+		<title>About | callum fisher</title>
 		<script src="../../a/js/standard.js"></script>
 	</head>
 	<body>
