--- a/m/answer.html
+++ b/m/answer.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
 2025.01.27 -->
 <!DOCTYPE html>
 <html lang="en">
