--- a/m/lights-out.html
+++ b/m/lights-out.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2018-2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2018-2025 callum fisher - fishercallum@proton.me
 2018.08.01 - 2025.01.24 -->
 <!DOCTYPE html>
 <html lang="en">
