--- a/m/privacy/index.html
+++ b/m/privacy/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
 2025.01.17 - 2025.02.14 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Privacy policies for this website and its third-party services."/>
-		<title>Privacy | Callum Fisher</title>
+		<title>Privacy | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
