--- a/m/settings/index.html
+++ b/m/settings/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
 2025.01.17 - 2025.02.14 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Customize website settings."/>
-		<title>Settings | Callum Fisher</title>
+		<title>Settings | callum fisher</title>
 		<script src="../../a/js/standard.js"></script>
 		<script src="../../a/js/settings.js"></script>
 	</head>
