--- a/t/20240810-top-multiplayer-piano-websites/index.html
+++ b/t/20240810-top-multiplayer-piano-websites/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2024 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2024 callum fisher - fishercallum@proton.me
 2024.08.10 - 2025.02.06 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Fancy sharing a piano with 20+ other people across the internet? (Yes, you can do that.) Here are my top 4 multiplayer piano websites!"/>
-		<title>Exploring Public Pianos Online: Top 4 Multiplayer Piano Websites | Callum Fisher</title>
+		<title>Exploring Public Pianos Online: Top 4 Multiplayer Piano Websites | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
