--- a/t/20250113-epicos/index.html
+++ b/t/20250113-epicos/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
 2025.01.13 - 2025.02.04 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="A multi-purpose command-based bot for Multiplayer Piano."/>
-		<title>EpicOS: A bot for Multiplayer Piano | Callum Fisher</title>
+		<title>EpicOS: A bot for Multiplayer Piano | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
@@ -50,6 +50,11 @@
 						<ul>
 							<li>The second version of EpicOS, cleaned up for publication in 2025.</li>
 						</ul>
+					</section>
+					<section id="2018">
+						<h2>2018</h2>
+						<h3>EpicOS for Discord (v2) (2018.11.02)</h3>
+						<p>v2 of 'EpicOS for Discord' - not much different than the previous. Recovered from a CD-RW on 2023.01.06.</p>
 					</section>
 					<section id="2020">
 						<h2>2020</h2>
