--- a/t/20250115-requests-for-multiplayer-piano/index.html
+++ b/t/20250115-requests-for-multiplayer-piano/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright (©) 2025 Callum Fisher - fishercallum@proton.me
+<!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
 2025.01.15 - 2025.01.28 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="../../site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content="Play from, upload to and search through a collection of MIDI files with Requests for Multiplayer Piano."/>
-		<title>Requests for Multiplayer Piano | Callum Fisher</title>
+		<title>Requests for Multiplayer Piano | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
