--- a/m/starswar.html
+++ b/m/starswar.html
@@ -1,10 +1,10 @@
 <!-- Copyright (©) 2025 callum fisher - fishercallum@proton.me
-2025.01.27 - 2025.02.04 -->
+2025.01.27 - 2025.03.04 -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
 			body {
 				background: black;
@@ -30,7 +30,7 @@
 			}
 		</style>
 		<title>starswar</title>
-		<script defer>
+		<script>
 			let ranNum = (min, max) => {
 				return Math.floor(Math.random() * (max - min) + min);
 			}
@@ -53,7 +53,7 @@
 		</script>
 	</head>
 	<body>
-		<p id="laser">stars war</p>
+		<p>stars war</p>
 		<noscript><h2>postponed for dinner</h2></noscript>
 		<div class="themarqueedivision">
 			<marquee behavior="scroll" direction="right" scrollamount="1"> 
