--- a/w/scrap/index.html
+++ b/w/scrap/index.html
@@ -134,6 +134,11 @@
 							switch off the machine
 						</p>
 					</section>
+					<section id="20240219">
+						<h2>2024.02.19</h2>
+						<h3>food group</h3>
+						<p>i want to be a food group</p>
+					</section>
 					<section id="20240117">
 						<h2>2024.01.17</h2>
 						<h3>waves</h3>
@@ -176,6 +181,11 @@
 							Farewell everybody<br>
 							Internet sauce
 						</p>
+					</section>
+					<section id="20231201">
+						<h2>2023.12.01</h2>
+						<h3>beans</h3>
+						<p>been eating beans</p>
 					</section>
 					<section id="20230911">
 						<h2>2023.09.11 - 2024.10.29</h2>
