--- a/w/notes/index.html
+++ b/w/notes/index.html
@@ -33,6 +33,18 @@
 				<article>
 					<h1>n<i>ooooo</i>tes</h1>
 					<hr>
+					<section id="20250315am1216">
+						<h2>2025.03.15</h2>
+						<h3>Publication Saturday #4</h3>
+						<p>Hi. It's 'publication party Saturday.' The 15th. Sound of the Week! #1 goes live today - Well, much later today. Today marks our fourth week on the 'Saturday' schedule. It also marks the first addition beyond 'update the website.' Now we're publishing weekly music posts. I should consider 'writing days' or something mid-week just to ensure that keeps going. Everything would still be published on Saturday, but ready by a certain day. Maybe Wednesday or Thursday for Sound of the Week. Or if we can really write one post a day, maybe we should just get that started.</p>
+						<p>We'd have a huge backlog of weekly posts. Or, maybe Sound of the Week is something that should just be written when it needs to be. That is, when I feel like it. As long as there is something for Saturday, it's okay. But I'm going to set a personal goal of writing & finishing one post a day till I build up a decent backlog. Either way, I think relaxing on trying to make everything perfect is helping me out. The original first 'Sound of the Week' post was supposed to go out last week (8th) but it just wasn't gonna happen.</p>
+					</section>
+					<section id="20250313pm1110">
+						<h2>2025.03.13</h2>
+						<h3>Sound of the Week! #1 Thoughts</h3>
+						<p>Hi. So, I just wrote the first 'Sound of the Week!' post. Well, first to be published. I've written around five drafts now. None of them feel right. So I just wrote the first thing that came to mind, and that was The The's song 'Slow Emotion Replay.' It's a very short post, very casual. I don't know if its any good - or valuable in any way whatsoever. But if we publish it on publication Saturday (15th), it should give us some momentum. The way I see it is as a juggling act. We can gradually start juggling more & more - adding more to the schedule until it's a full-blown show.</p>
+						<p>We started with weekly website updates (Saturday). Now it's time to add 'Sound of the Week!' posts. I've been wanting to write about music in some way since 2022, so this is long overdue. No more waiting. I think earlier entries were trying to keep up some persona of a 'show-like' thing. But it's much easier and more geniune if we just stay honest. At the same time, I don't want to be completely lazy about it. So once again, as with everything, it's a balancing act. A juggling act.</p>
+					</section>
 					<section id="20250308pm1029">
 						<h2>2025.03.08</h2>
 						<p>find out next week</p>
