--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!-- Copyright (©) 2024-2025 callum fisher - fishercallum@proton.me
-2024.08.09 - 2025.02.23 -->
+2024.08.09 - 2025.05.29 -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -11,7 +11,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
 		<link rel="manifest" href="/site.webmanifest"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<title>Where is it!? | callum fisher</title>
+		<title>page not found | callum fisher</title>
 	</head>
 	<body>
 		<div class="navbar" id="top">
@@ -25,8 +25,8 @@
 		</div>
 		<main>
 			<div class="box" id="box">
-				<h1 id="heading"><i>Where is it!?</i></h1>
-				<p><b>The page you requested was not found on this server. It may have been moved or deleted, or you may have typed the page name incorrectly.</b></p>
+				<h1 id="heading"><i>where is it?!</i></h1>
+				<p>The page you requested was not found on this server. It may have been moved or deleted, or you may have typed the page name incorrectly.</p>
 			</div>
 			<div class="box">
 				<a class="button background nofloat" role="button" href="/index.html">Go to Directory</a>
