--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <!-- Copyright (©) 2024-2025 callum fisher - fishercallum@proton.me
-2024.08.09 - 2025.03.20 -->
+2024.08.09 - 2025.03.29 -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -36,8 +36,8 @@
 				<p>
 					You can also find me on:
 					<ul>
-						<li><a target="_blank" href="https://github.com/fishercallum">GitHub</a> for code (fishercallum)</li>
-						<li><a target="_blank" href="https://discord.com">Discord</a> for messages (@fishercallum)</li>
+						<li><a href="https://github.com/fishercallum">GitHub</a> for code (fishercallum)</li>
+						<li><a href="https://discord.com">Discord</a> for messages (@fishercallum)</li>
 					</ul>
 				</p>
 				<p>Thanks for checking in.</p>
